<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SecondActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="#8BC34A"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:text="@string/operaciones"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:isScrollContainer="true"
                android:orientation="vertical"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:scrollbarAlwaysDrawVerticalTrack="true"
                android:scrollbars="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/numero1"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edtnum1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/numero1"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/numero2"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edtnum2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/numero2"
                    android:inputType="number" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp">

                    <Button
                        android:id="@+id/btnsumar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sumar"
                        android:textSize="10sp" />

                    <Button
                        android:id="@+id/btnrestar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/restar"
                        android:textSize="10sp" />

                    <Button
                        android:id="@+id/btnmulti"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/multi"
                        android:textSize="10sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btndiv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/div"
                        android:textSize="10sp" />

                    <Button
                        android:id="@+id/btnmayor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mayor"
                        android:textSize="10sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnmcm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mcm"
                        android:textSize="10sp" />

                    <Button
                        android:id="@+id/btnmcd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mcd"
                        android:textSize="10sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="horizontal"
                android:padding="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:foregroundGravity="clip_horizontal"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    app:srcCompat="@mipmap/escudo_unimag_sm" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>